--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col offset-5">
                     <br>
-                    {% block prostage %} <a href="/" class="btn btn-dark btn-lg">Prostages</a> {% endblock %}
+                    {% block prostage %} <a href="{{ path('accueil') }}" class="btn btn-dark btn-lg">Prostages</a> {% endblock %}
                 </div>
             </div>
         </div>
