--- a/templates/prostages/stagesFormation.html.twig
+++ b/templates/prostages/stagesFormation.html.twig
@@ -8,10 +8,10 @@
                 <h2>Liste des stages</h2>
             </div>
             <div class="col offset-5">
-                <a href="/formations" class="btn btn-primary">Filtrer par formation</a>
+                <a href="{{ path('formations') }}" class="btn btn-primary">Filtrer par formation</a>
             </div>
             <div class="col offset-0">
-                <a href="/entreprises" class="btn btn-primary">Filtrer par entreprise</a>
+                <a href="{{ path('entreprises') }}" class="btn btn-primary">Filtrer par entreprise</a>
             </div>
         </div>
         <br><br>
@@ -32,7 +32,7 @@
                         <td>{{stage.titre}}</td>
                         <td>{{stage.entreprise.nom}}</td>
                         <td>{{stage.mission}}</td>
-                        <td><a href="/stages/{{stage.id}}" class="btn btn-primary btn-sm">Détails</a></td>
+                        <td><a href="{{ path('stages',{'id': stage.id }) }}" class="btn btn-primary btn-sm">Détails</a></td>
                     </tr>
                 {% endfor %}
             </tbody>
