--- a/templates/prostages/index.html.twig
+++ b/templates/prostages/index.html.twig
@@ -12,6 +12,7 @@
             </div>
             <div class="col offset-0">
                 <a href="{{ path('entreprises') }}" class="btn btn-primary">Filtrer par entreprise</a>
+                <a href="{{ path('creerEntreprise') }}" class="btn btn-primary">Créer une entreprise</a>
             </div>
         </div>
         <br><br>
