--- a/templates/prostages/creerStage.html.twig
+++ b/templates/prostages/creerStage.html.twig
@@ -6,6 +6,7 @@
         {{ form_row(vueFormulaire.mission)}} <br>
         {{ form_row(vueFormulaire.email)}} <br>
         {{ form_row(vueFormulaire.entreprise)}} <br>
+        {{ form_row(vueFormulaire.formations)}} <br>
     <button type="submit" class="btn btn-dark">Enregistrer</button>
     {{form_end(vueFormulaire)}}
 
