--- a/templates/prostages/index.html.twig
+++ b/templates/prostages/index.html.twig
@@ -13,6 +13,7 @@
             <div class="col offset-0">
                 <a href="{{ path('entreprises') }}" class="btn btn-primary">Filtrer par entreprise</a>
                 <a href="{{ path('creerStage') }}" class="btn btn-primary">Créer un stage</a>
+                <a href="{{ path('creerEntreprise') }}" class="btn btn-primary">Créer une entreprise</a>
             </div>
         </div>
         <br><br>
