--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,11 @@
                     {% block prostage %} <a href="{{ path('accueil') }}" class="btn btn-dark btn-lg">Prostages</a> {% endblock %}
                 </div>
             </div>
+                {% if is_granted('ROLE_USER') %}
+                    <a class="btn btn-primary" href="{{path('app_logout')}}">{{ app.user.email }} Déconnexion</a>
+                {% else %}
+                    <a class="btn btn-primary" href="{{path('app_login')}}">Connexion</a> 
+                {% endif %}
         </div>
         
     </head>
