--- a/templates/prostages/index.html.twig
+++ b/templates/prostages/index.html.twig
@@ -14,6 +14,7 @@
                 <a href="{{ path('entreprises') }}" class="btn btn-primary">Filtrer par entreprise</a>
                 <a href="{{ path('creerStage') }}" class="btn btn-primary">Créer un stage</a>
                 <a href="{{ path('creerEntreprise') }}" class="btn btn-primary">Créer une entreprise</a>
+                <a href="{{ path('inscription') }}" class="btn btn-primary">Inscription</a>
             </div>
         </div>
         <br><br>
